--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -10949,7 +10949,7 @@ fieldset[disabled] .btn {
     transition: none !important;
   }
 }
-._1n9ev8k3:focus-visible {
+.explore-filter__text-hidden:focus-visible {
   color: #fff !important;
 }
 .btn-filter-rounded-sm-secondary:focus-visible {
@@ -13605,7 +13605,7 @@ fieldset[disabled] .btn {
   padding-top: 8px!important
 }
 ._16sb0g4v,
-._h69t7tv,
+.hidden__md,
 ._pawvzww {
   display: none!important
 }
@@ -13626,7 +13626,7 @@ fieldset[disabled] .btn {
   }
 }
 @media (min-width:744px) {
-  ._h69t7tv {
+  .hidden__md {
     display: block!important
   }
 }
@@ -15082,7 +15082,7 @@ fieldset[disabled] .btn {
   line-height: 18px!important;
   width: 58px!important
 }
-._1n9ev8k3::after {
+.explore-filter__text-hidden::after {
   content: ''!important;
   width: calc(100% + 2px)!important;
   height: calc(100% + 2px)!important;
@@ -15595,12 +15595,12 @@ button[data-testid=cypress-headernav-profile]:focus + .c3i7glo[class][class] {
   }
 }
 @media (min-width:744px) {
-  .dir.card__location-click[class][class]:focus-visible {
+  .dir.click_card[class][class]:focus-visible {
     transition: box-shadow .2s;
     box-shadow: 0 0 0 2px rgba(255,255,255,.8),0 0 0 4px var(--f-k-smk-x)
   }
   @media (prefers-reduced-motion:reduce) {
-    .dir.card__location-click[class][class]:focus-visible {
+    .dir.click_card[class][class]:focus-visible {
       transition: none
     }
   }
