--- a/src/css/components/buttons.css
+++ b/src/css/components/buttons.css
@@ -2421,7 +2421,7 @@ fieldset[disabled] .btn {
     transition: none !important;
   }
 }
-._1n9ev8k3:focus-visible {
+.explore-filter__text-hidden:focus-visible {
   color: #fff !important;
 }
 .btn-filter-rounded-sm-secondary:focus-visible {
