--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -6983,7 +6983,7 @@ select[disabled] {
   border-width: 2px !important;
   border-radius: inherit !important;
 }
-._1lovfd0 {
+.btn-filter-rounded {
   cursor: pointer !important;
   text-align: center !important;
   border: 1px solid #ddd !important;
@@ -7008,18 +7008,18 @@ select[disabled] {
   font-size: 12px !important;
   line-height: 16px !important;
 }
-._1lovfd0:disabled {
+.btn-filter-rounded:disabled {
   cursor: not-allowed !important;
   color: #ddd !important;
   border-color: #ebebeb !important;
 }
 @media (hover: hover) {
-  ._1lovfd0:disabled:hover {
+  .btn-filter-rounded:disabled:hover {
     color: #ddd !important;
     border-color: #ebebeb !important;
   }
 }
-._1lovfd0:disabled:active {
+.btn-filter-rounded:disabled:active {
   color: #ddd !important;
   border-color: #ebebeb !important;
   -webkit-transform: none !important;
@@ -7027,37 +7027,37 @@ select[disabled] {
   transform: none !important;
 }
 @media (hover: hover) {
-  ._1lovfd0:hover {
+  .btn-filter-rounded:hover {
     color: #000 !important;
     border-color: #000 !important;
   }
 }
-._1lovfd0:active {
+.btn-filter-rounded:active {
   color: #000 !important;
   border-color: #000 !important;
   -webkit-transform: scale(0.925) !important;
   -ms-transform: scale(0.925) !important;
   transform: scale(0.925) !important;
 }
-._1lovfd0::-moz-focus-inner {
+.btn-filter-rounded::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._1lovfd0:focus::-moz-focus-inner {
+.btn-filter-rounded:focus::-moz-focus-inner {
   border: none !important;
 }
-._1lovfd0:-moz-focusring {
+.btn-filter-rounded:-moz-focusring {
   outline: 0 !important;
 }
-._1lovfd0:focus-visible {
+.btn-filter-rounded:focus-visible {
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1lovfd0:focus-visible {
+  .btn-filter-rounded:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
@@ -9462,7 +9462,7 @@ select[disabled] {
 .explore-filter__wrapper:focus-within + .dialog__wrapper {
   display: inline-block !important;
 }
-.explore-filter__wrapper:focus-within ._1xw9br6j > svg {
+.explore-filter__wrapper:focus-within .explore-filter__icon > svg {
   rotate: 180deg;
 }
 @media (min-width: 744px) and (min-height: 475px) {
