--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -15580,17 +15580,17 @@ button[data-testid=cypress-headernav-profile]:focus + .c3i7glo[class][class] {
   margin: 8px 0
 }
 @media (prefers-reduced-motion:reduce) {
-  .dir.vmfx3gj[class][class]:focus-visible {
+  .dir.header-filter__controls-btn[class][class]:focus-visible {
     transition: none
   }
 }
 @media (prefers-reduced-motion:reduce) {
-  .dir.vmfx3gj[class][class]:focus-visible {
+  .dir.header-filter__controls-btn[class][class]:focus-visible {
     transition: none
   }
 }
 @media (prefers-reduced-motion:reduce) {
-  .dir.v1tureqs[class][class]:focus-visible {
+  .dir.btn-filter[class][class]:focus-visible {
     transition: none
   }
 }
