--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -15231,7 +15231,7 @@ fieldset[disabled] .btn {
   padding-bottom: 4px!important
 }
 @media (hover:hover) {
-  .explore__show-more-click:hover {
+  .explore-click:hover {
     cursor: pointer!important;
     color: #000!important;
     text-decoration: underline!important
