--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -13397,11 +13397,11 @@ h3:first-child {
   min-width: 100% !important;
   display: flex !important;
 }
-.text_highlight dir dir-ltr {
+.text-highlight dir dir-ltr {
   border: 0;
   padding: 0;
 }
-.text_highlight[class][class] {
+.text-highlight[class][class] {
   height: 1px;
   overflow: clip;
   position: absolute;
@@ -34288,7 +34288,7 @@ tr.show-desktop {
   line-height: var(--dpgw-ac);
   letter-spacing: 0.02em;
 }
-.text_highlight:is(*, #x#x) {
+.text-highlight:is(*, #x#x) {
   clip: rect(0 0 0 0);
   clip-path: inset(100%);
   height: 1px;
@@ -34298,7 +34298,7 @@ tr.show-desktop {
   white-space: nowrap;
   width: 1px;
 }
-.dir.text_highlight:is(*, #x#x) {
+.dir.text-highlight:is(*, #x#x) {
   border: 0;
   padding: 0;
 }
@@ -47541,7 +47541,7 @@ tr.show-desktop {
 .ll4r2nl[class][class]:nth-child(1n) .focus-visible[class][class] {
   outline: 2px solid var(--f-k-smk-x);
 }
-.text_highlight[class][class] {
+.text-highlight[class][class] {
   clip: rect(0 0 0 0);
   clip-path: inset(100%);
   height: 1px;
@@ -49952,7 +49952,7 @@ a:hover {
 .dir-rtl.atm_gz_1y44olf.atm_gz_1y44olf {
   margin-right: 4px;
 }
-.text_highlight[class][class] {
+.text-highlight[class][class] {
   -webkit-clip: rect(0 0 0 0);
   clip: rect(0 0 0 0);
   -webkit-clip-path: inset(100%);
@@ -49964,7 +49964,7 @@ a:hover {
   white-space: nowrap;
   width: 1px;
 }
-.dir.text_highlight[class][class] {
+.dir.text-highlight[class][class] {
   border: 0;
   padding: 0;
 }
