rename new_arrow -> new-arrow

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -14312,7 +14312,7 @@ h3:first-child {
   height: 38px !important;
   border-radius: 50% !important;
 }
-.new_arrow-underscore {
+.new-arrow-underscore {
   border: 0 !important;
   clip: rect(0, 0, 0, 0) !important;
   clip-path: inset(100%) !important;
@@ -32193,7 +32193,7 @@ tr.show-desktop {
     width: 100% !important;
   }
 }
-.new_arrow-underscore {
+.new-arrow-underscore {
   border: 0 !important;
   clip: rect(0 0 0 0) !important;
   -webkit-clip-path: inset(100%) !important;
@@ -32584,7 +32584,7 @@ tr.show-desktop {
   margin-left: auto !important;
   color: #fff !important;
 }
-.new_arrow-space {
+.new-arrow-space {
   margin-left: 8px !important;
 }
 ._1c377o8 {
@@ -48062,7 +48062,7 @@ tr.show-desktop {
   display: inline-block !important;
   width: 100% !important;
 }
-.new_arrow-underscore {
+.new-arrow-underscore {
   border: 0 !important;
   clip: rect(0, 0, 0, 0) !important;
   clip-path: inset(100%) !important;
