--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13586,7 +13586,7 @@ fieldset[disabled] .btn {
 ._klarpw {
   margin-top: 8px!important
 }
-.new_arrow-space,
+.new-arrow-space,
 .ml1 {
   margin-left: 8px!important
 }
