rename starting 6h in explore page

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13641,7 +13641,7 @@ fieldset[disabled] .btn {
   }
 }
 @media (min-width:1440px) {
-  ._1lo0c2q {
+  .explore__time-btn-wrapper {
     display: none!important
   }
 }
