--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -7308,7 +7308,7 @@ select[disabled] {
     width: 16.666666666666668% !important;
   }
 }
-._lc4tdwf {
+.explore__list-w-rapper-width {
   display: inline-block !important;
   vertical-align: top !important;
   white-space: normal !important;
@@ -7318,22 +7318,22 @@ select[disabled] {
   flex: none !important;
 }
 @media (min-width: 744px) {
-  ._lc4tdwf {
+  .explore__list-w-rapper-width {
     width: 50% !important;
   }
 }
 @media (min-width: 1128px) {
-  ._lc4tdwf {
+  .explore__list-w-rapper-width {
     width: 33.333333333333336% !important;
   }
 }
 
-.cyxjsuw[class][class] {
+.explore__list-card-wrapper[class][class] {
   font-weight: var(--e-y-j-d-v-j);
   color: var(--f-k-smk-x);
   position: relative;
 }
-.l1dijiv4[class][class] {
+.explore__list-card-wrapper-click[class][class] {
   display: block;
   height: 100%;
   position: absolute;
@@ -7341,21 +7341,21 @@ select[disabled] {
   width: 100%;
   outline: 0;
 }
-.dir.l1dijiv4[class][class] {
+.dir.explore__list-card-wrapper-click[class][class] {
   border-radius: var(--i-g-gvoq);
 }
-.dir-ltr.l1dijiv4[class][class] {
+.dir-ltr.explore__list-card-wrapper-click[class][class] {
   left: 0;
 }
-.dir.l1dijiv4[class][class]::-moz-focus-inner {
+.dir.explore__list-card-wrapper-click[class][class]::-moz-focus-inner {
   border: none;
   padding: 0;
   margin: 0;
 }
-.dir.l1dijiv4[class][class]:focus::-moz-focus-inner {
+.dir.explore__list-card-wrapper-click[class][class]:focus::-moz-focus-inner {
   border: none;
 }
-.l1dijiv4[class][class]:-moz-focusring {
+.explore__list-card-wrapper-click[class][class]:-moz-focusring {
   outline: 0;
 }
 
@@ -8191,12 +8191,12 @@ select[disabled] {
     padding-right: max(80px, calc((100vw - 1600px) / 2)) !important;
   }
 }
-.dir.l1dijiv4[class][class]:focus-visible {
+.dir.explore__list-card-wrapper-click[class][class]:focus-visible {
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x);
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.l1dijiv4[class][class]:focus-visible {
+  .dir.explore__list-card-wrapper-click[class][class]:focus-visible {
     transition: none;
   }
 }
@@ -27280,7 +27280,7 @@ html :where(img[class*='wp-image-']) {
     overflow: hidden !important;
   }
 }
-._7ts20mk {
+.explore__list-w-rapper-mx-0 {
   padding: 0 18px 30px !important;
   transition: -ms-transform 0.5s, -webkit-transform 0.5s, transform 0.5s !important;
   white-space: nowrap !important;
@@ -27289,7 +27289,7 @@ html :where(img[class*='wp-image-']) {
   display: flex !important;
 }
 @media (min-width: 744px) {
-  ._7ts20mk {
+  .explore__list-w-rapper-mx-0 {
     margin-bottom: 0 !important;
     padding: 0 !important;
     overflow: visible !important;
@@ -32791,7 +32791,7 @@ tr.show-desktop {
   }
 }
 @media (min-width: 1440px) {
-  ._1lo0c2q {
+  .explore__time-btn-wrapper {
     display: none !important;
   }
 }
