--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -53347,3 +53347,82 @@ a:hover {
   flex: 1 1 0% !important;
   padding: 0 !important;
 }
+._12i6oakv {
+  cursor: pointer!important;
+  text-align: center!important;
+  border: 1px solid #222!important;
+  outline: 0!important;
+  margin: 0!important;
+  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,'Helvetica Neue',sans-serif!important;
+  position: relative!important;
+  transition-property: -ms-transform,-webkit-transform,transform,background-color,border-color!important;
+  transition-duration: .15s!important;
+  transition-timing-function: ease-in-out!important;
+  padding: 4px 12px!important;
+  min-height: 32px!important;
+  border-radius: 16px!important;
+  font-size: 14px!important;
+  line-height: 18px!important;
+  background-color: #f7f7f7!important;
+  color: #222!important
+}
+._12i6oakv::after{
+  content: ''!important;
+  width: calc(100% + 2px)!important;
+  height: calc(100% + 2px)!important;
+  background-color: transparent!important;
+  position: absolute!important;
+  top: -1px!important;
+  left: -1px!important;
+  border-color: inherit!important;
+  border-style: solid!important;
+  border-width: 2px!important;
+  border-radius: inherit!important
+}
+@media (hover:hover) {
+  ._15pf4i2:disabled:hover {
+    color: #ddd!important;
+    border-color: #ebebeb!important
+  }
+}
+@media (hover:hover) {
+  ._15pf4i2:hover {
+    color: #000!important;
+    border-color: #000!important
+  }
+}
+@media (prefers-reduced-motion:reduce) {
+  ._15pf4i2:focus-visible {
+    -webkit-transition: none!important;
+    -moz-transition: none!important;
+    transition: none!important
+  }
+}
+._15pf4i2 {
+  cursor: pointer!important;
+  text-align: center!important;
+  border: 1px solid #ddd!important;
+  background-color: #fff!important;
+  outline: 0!important;
+  padding: 4px 12px!important;
+  margin: 0!important;
+  color: #222!important;
+  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif!important;
+  position: relative!important;
+  -webkit-transition-property: -webkit-transform,transform,background-color,border-color!important;
+  -moz-transition-property: transform,background-color,border-color!important;
+  transition-property: -ms-transform,-webkit-transform,transform,background-color,border-color!important;
+  -webkit-transition-duration: .15s!important;
+  transition-duration: .15s!important;
+  -webkit-transition-timing-function: ease-in-out!important;
+  transition-timing-function: ease-in-out!important;
+  min-height: 32px!important;
+  border-radius: 16px!important;
+  font-size: 14px!important;
+  line-height: 18px!important
+}
+._15pf4i2:disabled {
+  cursor: not-allowed!important;
+  color: #ddd!important;
+  border-color: #ebebeb!important
+}
