--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -19,7 +19,7 @@
   border-top: 1px solid #ddd !important;
   margin: 0 !important;
 }
-.tab__header-text {
+.section-header-semibold {
   font-size: 22px !important;
   line-height: 26px !important;
   font-weight: 600 !important;
@@ -38751,7 +38751,7 @@ tr.show-desktop {
   height: 8px !important;
   background-color: #ebebeb !important;
 }
-._1okosyw {
+.section-header-semibold {
   font-size: 22px !important;
   line-height: 26px !important;
   font-weight: 600 !important;
